<resources>
    <string name="app_name">My Quiz Application</string>
    <string name="question_txt">تهران پایتخت ایران است؟</string>
    <string name="button_false">نادرست</string>
    <string name="button_true">درست</string>
    <string name="true_toast">جواب شما صحیح است</string>
    <string name="false_toast">جواب شما غلط است</string>

    <string name="question_australia">استرالیا بزرگ ترین قاره جهان است.</string>
    <string name="question_oceans">اقیانوس آرام بزرگ ترین اقیانوس جهان است.</string>
    <string name="question_mideast">همه کشورهای خاورمیانه عرب زبان هستند.</string>
    <string name="question_africa">مصر در قاره آفریقا قرار دارد.</string>
    <string name="question_americas">کشور آمریکا پرجمعیت ترین کشور دنیا است.</string>
    <string name="question_asia">قاره آسیا در نیم کره جنوبی جهان واقع شده است.</string>
    <string name="button_next">بعدی</string>
    <string name="button_prev">قبلی</string>
    <string name="game_over">GAME OVER !!</string>

    <string name="button_cheat">تقلب</string>

    <string name="final_score">Your Score Is: </string>
    <string name="warning_txt">آیا مطمئنید می خواهید تقلب کنید؟</string>
    <string name="show_answer_btn">نمایش تقلب</string>
    <string name="cheat_warner">تقلب کار بدیه !</string>
    <string name="font_size_txt">اندازه متن : </string>
    <string name="medium_font_size">متوسط</string>
    <string name="normal_font_size">پیش فرض</string>
    <string name="large_font_size">بزرگ</string>
    <string name="small_font_size">کوچک</string>
    <string name="save_btn">ذخیره</string>
    <string name="discard_btn">لغو</string>
    <string name="cheat_hide">تقلب</string>
    <string name="last_hide">اخرين</string>
    <string name="prev_hide">قبلي</string>
    <string name="next_hide">بعدي</string>
    <string name="first_hide">اولين</string>
    <string name="false_hide">غلط</string>
    <string name="true_hide">صحيح</string>
    <string name="hide_txt">نمايش دادن/ پنهان كردن دكمه ها:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ans_chkbx">جواب</string>

</resources>